--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
@@ -128,6 +128,9 @@
     <ClInclude Include="TokenStream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Shorthand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="SolidGreenColour.fx">
