--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objLoader.cpp" />
     <ClCompile Include="Octree.cpp" />
+    <ClCompile Include="OctreeDebugger.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="SimpleGrass.cpp" />
     <ClCompile Include="Time.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="objLoader.h" />
     <ClInclude Include="Octree.h" />
+    <ClInclude Include="OctreeDebugger.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="Shorthand.h" />
