Started integrating a simple renderer and added some the ability to read quad strip model data from .obj files.

--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <ClCompile Include="BasicDemo.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="DefaultObjectRenderInfo.cpp" />
     <ClCompile Include="DX11Demo.cpp" />
     <ClCompile Include="dxerr.cpp" />
     <ClCompile Include="DXHelper.cpp" />
@@ -132,6 +133,7 @@
     <ClCompile Include="objLoader.cpp" />
     <ClCompile Include="Octree.cpp" />
     <ClCompile Include="OctreeDebugger.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SimpleGrass.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="TokenStream.cpp" />
@@ -143,6 +145,7 @@
     <ClInclude Include="basicVertex.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ConstantBuffers.h" />
+    <ClInclude Include="DefaultObjectRenderInfo.h" />
     <ClInclude Include="DrawData.h" />
     <ClInclude Include="DX11Demo.h" />
     <ClInclude Include="dxerr.h" />
@@ -151,10 +154,14 @@
     <ClInclude Include="FieldRenderData.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="MeshInfo.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="objLoader.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="OctreeDebugger.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="RendererData.h" />
+    <ClInclude Include="RenderInfo.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="Shorthand.h" />
@@ -162,6 +169,7 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="TokenStream.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="VertexData.h" />
     <ClInclude Include="WindManager.h" />
     <ClInclude Include="WindCuboid.h" />
     <ClInclude Include="WindSphere.h" />
@@ -177,6 +185,18 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4.0</ShaderModel>
       <DeploymentContent>false</DeploymentContent>
+    </FxCompile>
+    <FxCompile Include="DefaultObjectPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="DefaultObjectVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">5.0</ShaderModel>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
     </FxCompile>
     <FxCompile Include="Field.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
