Fixed lighting and added pseudo random colour variation seeded from instance world position.

--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
@@ -211,4 +211,9 @@
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="hlsl_rand.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
