--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
@@ -254,6 +254,9 @@
   <ItemGroup>
     <Image Include="..\Resources\GRASS.dds" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="hlsl_rand.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\directxtk_desktop_2015.2016.10.6.1\build\native\directxtk_desktop_2015.targets" Condition="Exists('..\packages\directxtk_desktop_2015.2016.10.6.1\build\native\directxtk_desktop_2015.targets')" />
