Major commit Completely revamped the octree - frustum cull cpu side, mark gpu nodes as visible - grass instance holds node idx (no space wasted as there was 8bytes padding anyway) - grass wind calc & add to output buffer - if node idx is marked as visible, add to pseudo append buffer & increment buffer counter - increment counter used as indirect draw call args buffer num instances

--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClCompile Include="WindManager_14_03.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GPUOctree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GPUOctreeDebugger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DX11Demo.h">
@@ -210,6 +216,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WindManager_14_03.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GPUOctree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GPUOctreeDebugger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
