--- a/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
+++ b/DirectXDemo/DirectXDemo/DirectXDemo.vcxproj
@@ -132,6 +132,8 @@
     <ClCompile Include="FieldUtilities.cpp" />
     <ClCompile Include="Field_14_03.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GPUOctree.cpp" />
+    <ClCompile Include="GPUOctreeDebugger.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objLoader.cpp" />
@@ -163,6 +165,8 @@
     <ClInclude Include="FieldUtilities.h" />
     <ClInclude Include="Field_14_03.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GPUOctree.h" />
+    <ClInclude Include="GPUOctreeDebugger.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="MeshInfo.h" />
     <ClInclude Include="Object.h" />
@@ -242,7 +246,7 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Effect</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4.0</ShaderModel>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">4.0</ShaderModel>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">5.0</ShaderModel>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
       <DeploymentContent>false</DeploymentContent>
     </FxCompile>
